--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".sample.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,7 +22,8 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".sample.LoginActivity"/>
+        <activity android:name=".sample.LoginActivity"
+            android:screenOrientation="portrait"/>
 
 
     </application>
